# openapi.json
@@ -784,6 +784,10 @@
                   "items": {
                     "type": "object",
                     "properties": {
+                      "RequestID": {
+                        "type": "string",
+                        "description": "The ID of the request"
+                      },
                       "Address": {
                         "type": "string",
                         "description": "The address of the request location"
@@ -819,6 +823,91 @@
           },
           "500": {
             "description": "Server error"
+          }
+        }
+      }
+    },
+    "/user/logout/{userId}": {
+      "post": {
+        "summary": "Logout a user",
+        "tags": [
+          "Authentication"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "required": true,
+            "description": "ID of the user to log out",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Logged out successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Logged out successfully."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request if userId is invalid",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Invalid userId"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found if userId does not exist",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "User not found"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Server error"
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -1345,6 +1434,10 @@
                     "MapLink": {
                       "type": "string",
                       "description": "The Google Maps link to the request location"
+                    },
+                    "message": {
+                      "type": "string",
+                      "description": "Message indicating the status of the request (e.g., \"The request was cancelled\" or \"There is no ongoing request for this volunteer.\")"
                     }
                   }
                 }
@@ -1934,6 +2027,91 @@
           },
           "500": {
             "description": "Server error"
+          }
+        }
+      }
+    },
+    "/volunteer/logout/{userId}": {
+      "post": {
+        "summary": "Logout a volunteer",
+        "tags": [
+          "Authentication"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "volunteerId",
+            "required": true,
+            "description": "ID of the volunteer to log out",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Logged out successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Logged out successfully."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request if userId is invalid",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Invalid userId"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found if volunteerId does not exist",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Volunteer not found"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Server error"
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
